@@ -8,6 +8,7 @@ javadir=$(datadir)/java/$(subdir)
 
 java_JAVA=\
   LineBufferedReader.java SourceError.java Lexer.java SyntaxException.java \
+  LispReader.java \
   ReportFormat.java LiteralFormat.java PadFormat.java CompoundFormat.java \
   RomanIntegerFormat.java EnglishIntegerFormat.java \
   CaseConvertFormat.java FlushFormat.java
